@startuml
skinparam linetype ortho
skinparam entity {
  BackgroundColor White
  BorderColor #2d6a4f
  ArrowColor #2d6a4f
}

entity "admin" as admin {
  * id         : int <<PK>>
  --
  username     : varchar(100)
  password     : varchar(255)
}

entity "dosen" as dosen {
  * id_dosen   : int <<PK>>
  --
  nama         : varchar(255)
  email        : varchar(255)
  password     : varchar(255)
}

entity "mahasiswa" as mhs {
  * id_mahasiswa : int <<PK>>
  --
  nama           : varchar(255)
  email          : varchar(255)
  password       : varchar(255)
}

entity "pertanyaan_ds" as p_ds {
  * no         : int <<PK>>
  --
  pertanyaan   : text
}

entity "pertanyaan_mhs" as p_mhs {
  * no         : int <<PK>>
  --
  pertanyaan   : text
}

entity "survey_ds" as s_ds {
  * no         : int <<PK>>
  --
  nama         : varchar(255) <<FK>>
  jawaban1     : tinyint
  jawaban2     : tinyint
  jawaban3     : tinyint
  jawaban4     : tinyint
  jawaban5     : tinyint
  jawaban6     : tinyint
  jawaban7     : tinyint
  jawaban8     : tinyint
}

entity "survey_mhs" as s_mhs {
  * no         : int <<PK>>
  --
  nama         : varchar(255) <<FK>>
  jawaban1     : tinyint
  jawaban2     : tinyint
  jawaban3     : tinyint
  jawaban4     : tinyint
  jawaban5     : tinyint
  jawaban6     : tinyint
  jawaban7     : tinyint
  jawaban8     : tinyint
}

dosen      ||--o{ s_ds   : "mengisi"
mahasiswa  ||--o{ s_mhs  : "mengisi"
p_ds       ||--o{ s_ds   : "digunakan dalam"
p_mhs      ||--o{ s_mhs  : "digunakan dalam"

@enduml
